tests/syntax_error/double_5point_exp.jou
def foo() -> None:
    x = 5.e3   # Error: invalid number or variable name "5.e3"
